# PenPal

./: README.md  app.py  pyproject.toml
PenPal/: constants.py  functions.py
