[tool.poetry]
name = "penpal"
version = "1.0.0"
description = "An AI Cover Letter Writer"
authors = ["Erick Martinez <efm.physics@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<4.0"
langchain = "^0.0.139"
openai = "^0.27.4"
streamlit = "^1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
